feat: implement AffiliateStat module and batch Transaction API (#5)
- Created AffiliateStat entity (id, userId, affiliateSales as List<Long>)
- Implemented AffiliateStatDTO with id, userId, affiliateSales (List<String>)
- Built /api/affiliate-stats endpoint returning DTO list
- Implemented /api/transactions/batch?ids=... to fetch transaction details in batch
- Updated TransactionDTO to include id, userId, cost, createdAt, productIds
- Marked Transaction.products with fetch = LAZY to avoid eager joins
- Extended MockDataLoader to seed affiliate transaction mappings

Closes #5